<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/borderfirma"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:paddingBottom="20dp"
    android:elevation="5dp"
    android:gravity="center_horizontal"
   >
    <LinearLayout
        android:id="@+id/conten1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >
    <TextView
        style="@style/TextosPrimarios"
        android:text="@string/fechaPrincipal"
        />
    <TextView
        android:id="@+id/DateInspection"
        style="@style/TextosSecondarios"
        android:text="20/10/2017"
        />
    <TextView
        style="@style/TextosPrimarios"
        android:text="@string/horainicio"/>

    <TextView
        android:id="@+id/hourStart"
        style="@style/TextosSecondarios"
        android:text="@string/horainicionumero"/>
    <TextView
        style="@style/TextosPrimarios"
        android:text="@string/consecutivo"
        />
    <TextView
        style="@style/TextosSecondarios"
        android:id="@+id/consecutiveNumber"
        android:text="@string/consecutivonumero"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conten1"
        android:id="@+id/conten2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/nombre"/>
        <TextView
            android:id="@+id/nameDriver"
            style="@style/TextosSecondarios"
            android:text="@string/nombreconductor"/>
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/cedula"/>
        <TextView
            android:id="@+id/dniDriver"
            style="@style/TextosSecondarios"
            android:text="@string/cedulaconductor"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:background="@drawable/placa"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/conten2"

        >
        <TextView
            android:id="@+id/numberPlaca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placaNumero"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textColor="@color/primary_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="colombia"
            android:layout_margin="2dp"
            android:textColor="@color/primary_text"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>