<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <GridLayout
        android:id="@+id/griduna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="9"
        android:columnCount="5"
        android:textAlignment="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        >
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/i"
            android:id="@+id/TipoParteDelantera"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParteDelanteraE"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParteDelanteraM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParteDelanteraNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionParteDelantera"/>
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/j"
            android:id="@+id/panelIzquierdo"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/EstadoPanelIzquierdoN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/EstadoPanelIzquierdoM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/EstadoPanelIzquierdoNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesPanelIzquierdo"
            />


        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/j1"
            android:id="@+id/panelDerecho"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPanelDerechoN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPanelDerechoM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPanelDerechoNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>
        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesPanelDerecho"
            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/l"
            android:id="@+id/quintaRueda"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoQuintaRuedaN"
            android:text="E"
            android:textColor="@android:color/transparent"
            />
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoQuintaRuedaM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoQuintaRuedaNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesQuintaRueda"

            />

        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/m"
            android:id="@+id/puertaInteriores"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPuertaInterioresN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPuertaInterioresM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPuertaInterioresNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesPuertaInteriores"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/n"
            android:id="@+id/pataMecanica"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadopataMecanicaN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadopataMecanicaM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadopataMecanicaNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesPataMecanica"
            />

        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/o"
            android:id="@+id/respiradores"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoRespiradoresN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoRespiradoresM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoRespiradoresNa"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesRespiradores"

            />
         <TextView
            style="@style/TextosPrimarios"
            android:text="@string/p"
             android:id="@+id/pisos"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPisosN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPisosM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPisosNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesPisos"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/q"
            android:id="@+id/vigas"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoVigasN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoVigasM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoVigasNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesVigas"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/r"
            android:id="@+id/parachoques"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParachoquesN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParachoquesM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoParachoquesNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesParachoques"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/s"
            android:id="@+id/tanques"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoTanquesN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoTanquesM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoTanquesNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesTanques"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/t"
            android:id="@+id/bateria"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoBateriaN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoBateriaM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoBateriaNA"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            style="@style/editextoovservaciones"
            android:id="@+id/observacionesBateria"
            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/u"
            android:id="@+id/pasajeroTecho"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPasajeroTechoN"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            style="@style/checks1"
            android:id="@+id/estadoPasajeroTechoM"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            android:id="@+id/estadoPasajeroTechoNA"
            style="@style/checks1"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            android:id="@+id/observacionesPasajeroTecho"
            style="@style/editextoovservaciones"

            />
        <TextView
            style="@style/TextosPrimarios"
            android:text="@string/k"
            android:id="@+id/cabina"/>
        <CheckBox
            android:id="@+id/estadoCabinaN"
            style="@style/checks1"
            android:text="E"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            android:id="@+id/estadoCabinaM"
            style="@style/checks1"
            android:text="M"
            android:textColor="@android:color/transparent"/>
        <CheckBox
            android:id="@+id/estadoCabinaNA"
            style="@style/checks1"
            android:text="NA"
            android:textColor="@android:color/transparent"/>

        <EditText
            android:id="@+id/observacionesCabina"
            style="@style/editextoovservaciones"

            />
    </GridLayout>
    <Button
        android:id="@+id/btnGuardar"
        style="@style/saveButton"
        android:text="Guardar Información"
        />

</LinearLayout>